# renode-run

./: .ci.yml  .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
renode_run/: __init__.py  __main__.py  defaults.py  generate.py  get.py  linux_package.py  package.py  utils.py  windows_package.py
tests/: common.sh  test.sh  test_download.sh  test_install.sh  test_management.sh  test_running.sh
